--- a/Tests/FsmTester/MainWindow.xaml
+++ b/Tests/FsmTester/MainWindow.xaml
@@ -1,13 +1,55 @@
 ﻿<Window x:Class="FsmTester.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <GroupBox Header="groupBox1" Height="100" HorizontalAlignment="Left" Margin="12,12,0,0" Name="groupBox1" VerticalAlignment="Top" Width="200">
-            <Grid />
+        Title="MainWindow" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="357" Width="461" ResizeMode="CanMinimize">                
+    <StackPanel Height="315" Name="stackPanel1" Width="396" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <GroupBox Header="groupBox1" Height="203" Name="groupBox1" Width="394" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Grid Height="175" Width="385" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="334*" />
+                    <ColumnDefinition Width="51*" />
+                </Grid.ColumnDefinitions>
+                <Canvas Name="canvas1"  Margin="30,19,26,-6" Grid.ColumnSpan="2">
+                <Image Height="36" Name="image_wheel_back" Source="/FsmTester;component/Images/car_wheel.png" Stretch="None" Width="36" Margin="63,2,168,27" Grid.Row="1" Grid.Column="1" Canvas.Left="-8" Canvas.Top="96">
+                    <Image.RenderTransform>
+                        <RotateTransform x:Name="TransRotate2" CenterX="18" CenterY="18" Angle="0" />
+                    </Image.RenderTransform>
+                </Image>
+                <Image Height="36" Name="image_wheel_forw" Stretch="None" Width="36" Source="/FsmTester;component/Images/car_wheel.png" Margin="217,0,14,29" Grid.Column="1" Grid.Row="1" Canvas.Left="-5" Canvas.Top="96">
+                    <Image.RenderTransform>
+                        <RotateTransform x:Name="TransRotate1" CenterX="18" CenterY="18" Angle="0" />
+                    </Image.RenderTransform>
+                </Image>
+                <Image Height="135" Name="image1" Stretch="None" Width="319" Source="/FsmTester;component/Images/car.png" Margin="20,6,-42,16" Grid.RowSpan="2" Grid.ColumnSpan="2" Canvas.Left="-15" Canvas.Top="5"></Image>
+                    <Canvas.Resources>
+                    <Storyboard x:Key="spin">
+                            <ParallelTimeline>
+                                <DoubleAnimation Storyboard.TargetName="TransRotate1" Storyboard.TargetProperty="Angle"
+                             From="360" To="0" Duration="0:0:6.787" RepeatBehavior="Forever" />
+                                <DoubleAnimation Storyboard.TargetName="TransRotate2" Storyboard.TargetProperty="Angle"
+                             From="360" To="0" Duration="0:0:6.787" RepeatBehavior="Forever" />
+                            </ParallelTimeline>
+                        </Storyboard>
+                    </Canvas.Resources>
+                </Canvas>
+                <MediaElement Canvas.Left="80" Canvas.Top="150" Height="0" Name="car_starting" Width="0" Source="Car Starting.wav" LoadedBehavior="Manual" />
+            </Grid>
         </GroupBox>
-        <WrapPanel Height="82" HorizontalAlignment="Left" Margin="10,128,0,0" Name="wrapPanel1" VerticalAlignment="Top" Width="484"></WrapPanel>
-        <TextBlock Height="80" HorizontalAlignment="Left" Margin="11,222,0,0" Name="textBlock1" Text="TextBlock" VerticalAlignment="Top" Width="477" />
-        <Button Content="Создать тест" Height="23" HorizontalAlignment="Left" Margin="416,89,0,0" Name="button1" VerticalAlignment="Top" Width="75"  />
-    </Grid>
+        <Grid Height="53" Name="grid2" Width="344">
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="50,17,0,0" Name="state_text" VerticalAlignment="Top" Width="120" />
+            <Label Content="State:" Height="28" HorizontalAlignment="Left" Margin="5,17,0,0" Name="label1" VerticalAlignment="Top" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="214,18,0,0" Name="textBox2" VerticalAlignment="Top" Width="120" />
+        </Grid>
+        <Grid Height="39" Name="grid1" Width="344">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Button Canvas.Left="0" Canvas.Top="215" Content="Key" Height="23" Name="key_button" Width="75" Margin="15,10,25,6"></Button>
+            <Button Canvas.Left="179" Canvas.Top="215" Content="Break" Height="23" Name="break_button" Width="75" Grid.Column="1" Margin="16,10,23,6" />
+            <Button Canvas.Left="286" Canvas.Top="215" Content="Gas" Height="23" Name="gas_button" Width="75" MouseLeftButtonDown="gas_button_MouseLeftButtonDown" Grid.Column="2" Margin="18,10,21,6" MouseLeftButtonUp="gas_button_MouseLeftButtonUp" PreviewMouseLeftButtonDown="gas_button_PreviewMouseLeftButtonDown" PreviewMouseLeftButtonUp="gas_button_PreviewMouseLeftButtonUp" />
+        </Grid>
+        
+    </StackPanel>
 </Window>
