--- a/Tests/Calculator/MainWindow.xaml
+++ b/Tests/Calculator/MainWindow.xaml
@@ -1,28 +1,28 @@
 ﻿<Window x:Class="Calculator.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Calculator" Height="334" Width="525" ResizeMode="NoResize">
-    <Grid>
-        <TextBox Height="35" HorizontalAlignment="Left" Margin="28,12,0,0" Name="screen" VerticalAlignment="Top" Width="463" FontSize="16" Text="" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" />
-        <Button Content="1" Height="40" HorizontalAlignment="Left" Margin="197,196,0,0" Name="one" VerticalAlignment="Top" Width="40" FontSize="12" Click="one_Click" />
-        <Button Content="2" Height="40" HorizontalAlignment="Left" Margin="243,196,0,0" Name="two" VerticalAlignment="Top" Width="40" FontSize="12" Click="two_Click" />
-        <Button Content="3" Height="40" HorizontalAlignment="Left" Margin="289,196,0,0" Name="three" VerticalAlignment="Top" Width="40" FontSize="12" Click="three_Click" />
-        <Button Content="4" Height="40" HorizontalAlignment="Left" Margin="197,150,0,0" Name="four" VerticalAlignment="Top" Width="40" FontSize="12" Click="four_Click" />
-        <Button Content="5" Height="40" HorizontalAlignment="Left" Margin="243,150,0,0" Name="five" VerticalAlignment="Top" Width="40" FontSize="12" Click="five_Click" />
-        <Button Content="6" Height="40" HorizontalAlignment="Left" Margin="289,150,0,0" Name="six" VerticalAlignment="Top" Width="40" FontSize="12" Click="six_Click" />
-        <Button Content="7" Height="40" HorizontalAlignment="Left" Margin="197,104,0,0" Name="seven" VerticalAlignment="Top" Width="40" FontSize="12" Click="seven_Click" />
-        <Button Content="8" Height="40" HorizontalAlignment="Left" Margin="243,104,0,0" Name="eight" VerticalAlignment="Top" Width="40" FontSize="12" Click="eight_Click" />
-        <Button Content="9" Height="40" HorizontalAlignment="Left" Margin="289,104,0,0" Name="nine" VerticalAlignment="Top" Width="40" FontSize="12" Click="nine_Click" />
-        <Button Content="0" Height="40" HorizontalAlignment="Left" Margin="197,243,0,0" Name="zero" VerticalAlignment="Top" Width="40" FontSize="12" Click="zero_Click" />
-        <Button Content="," Height="40" HorizontalAlignment="Left" Margin="243,243,0,0" Name="point" VerticalAlignment="Top" Width="40" Click="point_Click" />
-        <Button Content="/" Height="40" HorizontalAlignment="Left" Margin="335,104,0,0" Name="divide" VerticalAlignment="Top" Width="40" Click="divide_Click" />
-        <Button Content="On/C" Height="40" HorizontalAlignment="Left" Margin="12,196,0,0" Name="C_button" VerticalAlignment="Top" Width="40" Click="C_button_Click" />
-        <Button Content="+" Height="40" HorizontalAlignment="Left" Margin="335,244,0,0" Name="plus" VerticalAlignment="Top" Width="40" Click="plus_Click" />
-        <Button Content="-" Height="40" HorizontalAlignment="Left" Margin="335,196,0,0" Name="minus" VerticalAlignment="Top" Width="40" Click="minus_Click" />
-        <Button Content="*" Height="40" HorizontalAlignment="Left" Margin="335,150,0,0" Name="multiply" VerticalAlignment="Top" Width="40" Click="multiply_Click" />
-        <Button Content="CE" Height="40" HorizontalAlignment="Left" Margin="58,243,0,0" Name="CE_button" VerticalAlignment="Top" Width="40" Click="CE_button_Click" />
-        <Button Content="=" Height="39" HorizontalAlignment="Left" Margin="289,244,0,0" Name="equals" VerticalAlignment="Top" Width="40" Click="equals_Click" />
-        <Button Content="Off" Height="40" HorizontalAlignment="Left" Margin="12,243,0,0" Name="button1" VerticalAlignment="Top" Width="40" Click="button1_Click" />
-        <Button Content="%" Height="40" HorizontalAlignment="Left" Margin="104,243,0,0" Name="button2" VerticalAlignment="Top" Width="40" />
+        Title="Calculator" Height="315" Width="307" ResizeMode="NoResize">
+    <Grid Width="285">
+        <TextBox Height="35" HorizontalAlignment="Left" Margin="28,12,0,0" Name="screen" VerticalAlignment="Top" Width="225" FontSize="16" Text="" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" />
+        <Button Content="1" Height="40" HorizontalAlignment="Left" Margin="75,163,0,0" Name="one" VerticalAlignment="Top" Width="40" FontSize="12" Click="one_Click" />
+        <Button Content="2" Height="40" HorizontalAlignment="Left" Margin="121,163,0,0" Name="two" VerticalAlignment="Top" Width="40" FontSize="12" Click="two_Click" />
+        <Button Content="3" Height="40" HorizontalAlignment="Left" Margin="167,163,0,0" Name="three" VerticalAlignment="Top" Width="40" FontSize="12" Click="three_Click" />
+        <Button Content="4" Height="40" HorizontalAlignment="Left" Margin="75,117,0,0" Name="four" VerticalAlignment="Top" Width="40" FontSize="12" Click="four_Click" />
+        <Button Content="5" Height="40" HorizontalAlignment="Left" Margin="121,117,0,0" Name="five" VerticalAlignment="Top" Width="40" FontSize="12" Click="five_Click" />
+        <Button Content="6" Height="40" HorizontalAlignment="Left" Margin="167,117,0,0" Name="six" VerticalAlignment="Top" Width="40" FontSize="12" Click="six_Click" />
+        <Button Content="7" Height="40" HorizontalAlignment="Left" Margin="75,71,0,0" Name="seven" VerticalAlignment="Top" Width="40" FontSize="12" Click="seven_Click" />
+        <Button Content="8" Height="40" HorizontalAlignment="Left" Margin="121,71,0,0" Name="eight" VerticalAlignment="Top" Width="40" FontSize="12" Click="eight_Click" />
+        <Button Content="9" Height="40" HorizontalAlignment="Left" Margin="167,71,0,0" Name="nine" VerticalAlignment="Top" Width="40" FontSize="12" Click="nine_Click" />
+        <Button Content="0" Height="40" HorizontalAlignment="Left" Margin="75,210,0,0" Name="zero" VerticalAlignment="Top" Width="40" FontSize="12" Click="zero_Click" />
+        <Button Content="," Height="40" HorizontalAlignment="Left" Margin="121,210,0,0" Name="point" VerticalAlignment="Top" Width="40" Click="point_Click" />
+        <Button Content="/" Height="40" HorizontalAlignment="Left" Margin="213,71,0,0" Name="divide" VerticalAlignment="Top" Width="40" Click="divide_Click" />
+        <Button Content="On/C" Height="40" HorizontalAlignment="Left" Margin="29,117,0,0" Name="C_button" VerticalAlignment="Top" Width="40" Click="C_button_Click" />
+        <Button Content="+" Height="40" HorizontalAlignment="Left" Margin="213,211,0,0" Name="plus" VerticalAlignment="Top" Width="40" Click="plus_Click" />
+        <Button Content="-" Height="40" HorizontalAlignment="Left" Margin="213,163,0,0" Name="minus" VerticalAlignment="Top" Width="40" Click="minus_Click" />
+        <Button Content="*" Height="40" HorizontalAlignment="Left" Margin="213,117,0,0" Name="multiply" VerticalAlignment="Top" Width="40" Click="multiply_Click" />
+        <Button Content="CE" Height="40" HorizontalAlignment="Left" Margin="29,71,0,0" Name="CE_button" VerticalAlignment="Top" Width="40" Click="CE_button_Click" />
+        <Button Content="=" Height="39" HorizontalAlignment="Left" Margin="167,211,0,0" Name="equals" VerticalAlignment="Top" Width="40" Click="equals_Click" />
+        <Button Content="Off" Height="40" HorizontalAlignment="Left" Margin="29,210,0,0" Name="button1" VerticalAlignment="Top" Width="40" Click="button1_Click" />
+        <Button Content="%" Height="40" HorizontalAlignment="Left" Margin="29,163,0,0" Name="button2" VerticalAlignment="Top" Width="40" Click="button2_Click" />
     </Grid>
 </Window>
