--- a/Tests/AlarmClock/MainWindow.xaml
+++ b/Tests/AlarmClock/MainWindow.xaml
@@ -1,10 +1,25 @@
-﻿<Window x:Class="AlarmClock.MainWindow"
+﻿<Window x:Class="AlarmClockWindow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Alarm Clock" Height="390" Width="526" ResizeMode="NoResize">
     <Grid>
-        <Border BorderBrush="Silver" BorderThickness="1" Height="119" HorizontalAlignment="Left" Margin="57,35,0,0" Name="border1" VerticalAlignment="Top" Width="380" Background="Silver">
-            <TextBlock Height="66" Name="textBlock1" Text="TextBlock" Width="228" />
-        </Border>
+        <Rectangle Height="114" HorizontalAlignment="Left" Margin="48,12,0,0" Name="rectangle1" Stroke="Black" VerticalAlignment="Top" Width="404" Fill="#FFE6E6E6" />
+        <TextBlock Height="66" Name="display" Text="10:15" FontSize="56" TextAlignment="Right" Margin="175,31,184,254" />
+        <TextBlock HorizontalAlignment="Left" Margin="62,63,0,216" Name="alarm_sign" Text="AL" FontSize="24" Width="30" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="62,93,0,0" Name="am_pm_sign" Text="PM" VerticalAlignment="Top" FontSize="24" />
+        <Image Height="39" HorizontalAlignment="Left" Margin="51,18,0,0" Name="signal_image" Stretch="None" VerticalAlignment="Top" Width="62" Source="/AlarmClock;component/Images/alarm.png" RenderOptions.BitmapScalingMode="HighQuality" ClipToBounds="False" />
+        <Slider Height="23" HorizontalAlignment="Left" Margin="48,155,0,0" Name="mode_slider" VerticalAlignment="Top" Width="183" Maximum="2" TickPlacement="BottomRight" SmallChange="1" IsSnapToTickEnabled="True" ValueChanged="mode_slider_ValueChanged" />
+        <Label Content="time set" Height="28" HorizontalAlignment="Left" Margin="25,181,0,0" Name="label1" VerticalAlignment="Top" FontSize="16" />
+        <Label Content="run" Height="28" HorizontalAlignment="Left" Margin="124,181,0,0" Name="label2" VerticalAlignment="Top" FontSize="15" />
+        <Label Content="alarm set" Height="28" HorizontalAlignment="Right" Margin="0,181,239,0" Name="label3" VerticalAlignment="Top" FontSize="15" />
+        <RadioButton Content="On" Height="16" HorizontalAlignment="Left" Margin="340,159,0,0" Name="alarm_on_radio" VerticalAlignment="Top" />
+        <RadioButton Content="Off" Height="16" HorizontalAlignment="Right" Margin="0,159,98,0" Name="alarm_off_radio" VerticalAlignment="Top" />
+        <Label Content="alarm" Height="28" HorizontalAlignment="Left" Margin="349,181,0,0" Name="label4" VerticalAlignment="Top" FontSize="15" />
+        <Button Content="Hour" HorizontalAlignment="Left" Margin="48,0,0,53" Name="hour_button" Width="52" MouseRightButtonDown="hour_button_MouseRightButtonDown" Height="33" VerticalAlignment="Bottom" />
+        <Button Content="Minute" Height="33" HorizontalAlignment="Left" Margin="124,0,0,53" Name="minute_button" VerticalAlignment="Bottom" Width="52" Click="minute_button_Click" />
+        <Button Content="Drowse / Light" HorizontalAlignment="Right" Margin="0,0,71,53" Name="drowse_light_button" Width="112" Height="63" VerticalAlignment="Bottom" />
+        <StatusBar Height="23" HorizontalAlignment="Left" Margin="2,327,0,0" Name="status" VerticalAlignment="Top" Width="502">
+            <StatusBarItem Content="State:" />
+        </StatusBar>
     </Grid>
 </Window>
