--- a/Tests/Calculator/MainWindow.xaml
+++ b/Tests/Calculator/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Calculator" Height="335" Width="329" ResizeMode="NoResize" TextInput="Window_TextInput" KeyDown="Window_KeyDown">
-    <Grid Width="285">
+    <Grid Width="309" Height="298" VerticalAlignment="Bottom" HorizontalAlignment="Left">
         <TextBox Height="35" HorizontalAlignment="Left" Margin="28,12,0,0" Name="screen" VerticalAlignment="Top" Width="225" FontSize="16" Text="" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" />
         <Button Content="1" Height="40" HorizontalAlignment="Left" Margin="75,163,0,0" Name="one" VerticalAlignment="Top" Width="40" FontSize="12" Click="one_Click" />
         <Button Content="2" Height="40" HorizontalAlignment="Left" Margin="121,163,0,0" Name="two" VerticalAlignment="Top" Width="40" FontSize="12" Click="two_Click" />
@@ -24,7 +24,7 @@
         <Button Content="=" Height="39" HorizontalAlignment="Left" Margin="167,211,0,0" Name="equals" VerticalAlignment="Top" Width="40" Click="equals_Click" />
         <Button Content="Off" Height="40" HorizontalAlignment="Left" Margin="29,210,0,0" Name="button1" VerticalAlignment="Top" Width="40" Click="button1_Click" />
         <Button Content="%" Height="40" HorizontalAlignment="Left" Margin="29,163,0,0" Name="button2" VerticalAlignment="Top" Width="40" Click="button2_Click" />
-        <StatusBar Height="23" HorizontalAlignment="Left" Margin="0,273,0,0" Name="statusBar" VerticalAlignment="Top" Width="285">
+        <StatusBar Height="23" HorizontalAlignment="Left" Margin="0,273,0,0" Name="statusBar" VerticalAlignment="Top" Width="331">
             <StatusBarItem Content="State:" />
         </StatusBar>
     </Grid>
