fix FastKeystroke example

--- a/Tests/AlarmClock/MainWindow.xaml
+++ b/Tests/AlarmClock/MainWindow.xaml
@@ -22,7 +22,7 @@
         <StatusBar Height="23" HorizontalAlignment="Left" Margin="2,327,0,0" Name="status" VerticalAlignment="Top" Width="502">
             <StatusBarItem Content="State:" />
         </StatusBar>
-        <Button Content="Hour" HorizontalAlignment="Left" Margin="48,0,0,53" Name="hour_button" Width="52" Height="33" VerticalAlignment="Bottom" Click="hour_button_Click" PreviewMouseDown="hour_button_PreviewMouseDown" PreviewMouseUp="hour_button_PreviewMouseUp" />
-        <Button Content="Minute" Height="33" HorizontalAlignment="Left" Margin="124,0,0,53" Name="minute_button" VerticalAlignment="Bottom" Width="52" Click="minute_button_Click" PreviewMouseDown="minute_button_PreviewMouseDown" PreviewMouseUp="minute_button_PreviewMouseUp" />
+        <Button Content="Hour" HorizontalAlignment="Left" Margin="48,0,0,53" Name="hour_button" Width="52" Height="33" VerticalAlignment="Bottom" Click="hour_button_Click" PreviewMouseDown="hour_button_PreviewMouseDown" PreviewMouseUp="hour_button_PreviewMouseUp" ClickMode="Release" />
+        <Button Content="Minute" Height="33" HorizontalAlignment="Left" Margin="124,0,0,53" Name="minute_button" VerticalAlignment="Bottom" Width="52" Click="minute_button_Click" PreviewMouseDown="minute_button_PreviewMouseDown" PreviewMouseUp="minute_button_PreviewMouseUp" ClickMode="Release" />
     </Grid>
 </Window>
